Applied IE fix for tab links (icon/label not aligned)

--- a/src/styles/modules/category-column.less
+++ b/src/styles/modules/category-column.less
@@ -1,7 +1,6 @@
 .category-column {
 
     .category-column-box {
-        // padding: 10px;
         margin: 0px 0px 10px 0px;
         width: 100%;
         
@@ -88,8 +87,7 @@
         border-bottom: 0px;
     }
 
-    // Phone
-    @media screen and (max-width: @screen-xs-max) {
+    @media screen and (max-width: @screen-sm-max) { // Tablet + Phone
         margin-bottom: 15px;
     }
 
