--- a/src/styles/modules/tabs.less
+++ b/src/styles/modules/tabs.less
@@ -12,6 +12,7 @@ Tabbed Content
         li {
             a {
                 margin-right: 0px;
+                float: left;
             }
             small {
                 font-size: 11px;
@@ -20,6 +21,7 @@ Tabbed Content
             &.tab-icon {
                 .icon {
                     margin-right: 10px;
+                    float: left;
                     &.sprite-device-laptop {
                         margin-right: 7px;
                     }
@@ -30,7 +32,7 @@ Tabbed Content
                 }
 
                 a, a:hover {
-                    padding: 8px 10px 2px 10px;
+                    padding: 8px 10px;
                     background-position: 8px 8px !important;
                     background-repeat: no-repeat !important;
                 }
@@ -64,7 +66,7 @@ Tabbed Content
         @media screen and (min-width: @screen-sm-min) { // Tablet/Desktop
             &.tabbed-content-tabs-centred {
                 width: 100%;
-                height: 44px;
+                height: 46px;
                 text-align: center;
                 ul {
                     display: inline-block;
